# v-JianzhangDong_26_02_10

./: Claude-haiku-4.5.txt  debug_config.py  debug_config2.py  final_prompt.txt  grok-fast.txt  vscModelA-oswe-omai-d36-mix1-s35-0207.txt  vscModelA-oswe-omai-d36-mix1-s80-0207.txt
issue_before/: pyproject.toml  requirements.txt
issue_before/app/: config.py
issue_before/tests/: test_config.py
issue_project/tests/: test_http_client.py  test_processor.py
issue_project_fixed/: .env  check_path.py  conftest.py  debug_config.py  debug_config2.py  inspect_pydantic.py  pyproject.toml  requirements.txt  test_pydantic.py  test_pydantic2.py  test_simple.py
issue_project_fixed/app/: cli.py  config.py  http_client.py  processor.py
issue_project_fixed/logs/: pytest_results.txt
issue_project_fixed/tests/: conftest.py  test_cli.py
logs/: results.txt  results.xml
