[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-upgrade-challenge"
version = "0.1.0"
description = "A realistic Python project for testing dependency upgrade skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Challenge Author", email = "challenge@example.com" }
]

keywords = [
    "dependency",
    "upgrade",
    "testing",
    "python",
    "challenge"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
app-cli = "app.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["issue_project_fixed"]

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
    "E",
    "F",
    "W",
    "I"
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
